--- a/style.css
+++ b/style.css
@@ -59,5 +59,5 @@ line-height: 1.5em !important;
 margin-bottom:1.5em !important;
 }
 tlsection stafflist td{
-  padding: 1em;
+  padding-right: 0.5em;
 }
