--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ text-align: justify;
 color:#000000;
 font-size:16px;
 }
-tlsection ul li{
+tlsection ul li ul li{
 list-style-type:circle !important;
 
 }
