--- a/style.css
+++ b/style.css
@@ -32,11 +32,13 @@ padding-left:2em !important;
 margin:0em !important;
 padding-bottom:1em !important;
 }
+tlsection linespacer{
+ padding-bottom: 0.5em;
+}
 tlsection ol li{
 line-height:2em !important;
 text-align: justify;
 color:#000000;
-padding-top:0em !important;
 font-size:16px;
 }
 
